# ransomware

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: ransomware.h
src/: main.cpp  ransomware.cpp
